<resources>
    <string name="app_name">GiustoMangia</string>
    <string name="email_hint">Inserisci e-mail</string>
    <string name="password_hint">Inserisci password</string>
    <string name="username_hint">Inserisci username</string>
    <string name="passwordConfirm_hint">Conferma password</string>
    <string name="login_text">LOGIN</string>
    <string name="register_text">REGISTER</string>
    <string name="registerGood_text">Registrazione effettuata!</string>
    <string name="registerBad_text">Errore nella password e/o e-mail, registrazione non effettuata!</string>
    <string name="loginOk_text">Login effettuato correttamente!</string>
    <string name="loginBad_text">Non è stato possibile effettuare il login!</string>
    <string name="loginPassBad_text">Password non valida</string>
    <string name="loginEmailBad_text">E-mail non valida</string>
    <string name="cellNumberError_text">Numero di telefono non valido!</string>
    <string name="sendEmail_text">Manda e-mail</string>
    <string name="cellNumber_text">Inserisci numero di telefono</string>
    <string name="inputError">Inserire valori validi nei campi</string>
    <string name="checkout_text">CHECKOUT</string>
    <string name="welcome_text">Benvenuto su GiustoMangia!</string>
    <string name="ordineMin_text">Ordine minimo pari a  </string>
    <string name="changeLayout_text">Cambia layout</string>
    <string name="carrello_text">TOTALE: </string>
    <string name="erroreNumPortata">Non puoi diminuire se ne hai 0!</string>
    <string name="darkMode_text">DARK MODE</string>
    <string name="payment_text">PAGAMENTO</string>
    <string name="riepilogo_text">RIEPILOGO ORDINE</string>
</resources>
