<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutRegister"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/testoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/numTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cellNumber_text"
        android:textStyle="bold"
        android:textColor="@color/colorTextBlack"
        android:inputType="phone"
        />

    <EditText
        android:id="@+id/testoPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textStyle="bold"
        android:textColor="@color/colorTextBlack"
        android:inputType="textPassword"/>


    <EditText
        android:id="@+id/confermaPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordConfirm_hint"
        android:textStyle="bold"
        android:textColor="@color/colorTextBlack"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/registerButton"
            android:text="@string/register_text"
            android:textColor="@color/colorTextBlack"
            android:backgroundTint="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            />

    </LinearLayout>

</LinearLayout>